--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,11 @@
 <body>
     <section id="hero-contact">
         <header>
-            <a href="index.html" class="logo-placeholder">Logo</a>
+            <a href="index.html" class="logo-container">
+                <img src="synlogo.png" alt="Synagene Logo 1" class="logo">
+                <img src="synlogo2.png" alt="Synagene Logo 2" class="logo">
+            </a>
+            
             <input type="checkbox" id="nav-toggle" class="nav-toggle">
             <label for="nav-toggle" class="nav-toggle-label">
                 <span></span>
