--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <section id="hero-index">
         
         <header>
-            <a href="index.html" class="logo-placeholder">Logo</a>
+            <a href="index.html" class="logo-container">
+                <img src="synlogo.png" alt="Synagene Logo 1" class="logo">
+                <img src="synlogo2.png" alt="Synagene Logo 2" class="logo">
+            </a>
+            
             <input type="checkbox" id="nav-toggle" class="nav-toggle">
             <label for="nav-toggle" class="nav-toggle-label">
                 <span></span>
