--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Synagene Website</title>
-    <link rel="stylesheet" href="../css/all.css">
+    <!-- <link rel="stylesheet" href="../css/all.css"> -->
     <link rel="stylesheet" href="../css/index.css">
     <link href='https://fonts.googleapis.com/css?family=Cairo' rel='stylesheet'>
 </head>
@@ -33,7 +33,7 @@
         </div>
     </section>
 
-    <section id="future-healthcare" class="shared-background">
+    <section id="future-healthcare" class="shared-background fade-in-section">
         <div class="background-overlay"></div> <!-- Background overlay for improved text visibility -->
         <div class="container">
             <div class="title">
@@ -46,7 +46,7 @@
     </section>
     
 
-    <section id="our-place">
+    <section id="our-place" class="fade-in-section">
         <div class="container">
             <div class="description">
                 <p class="sizee">As a parent company, we bring together a unique blend of expertise, products, and services across genetic testing, digital healthcare, informatics, diagnostics, and education & training, creating a comprehensive ecosystem that addresses the multifaceted needs of modern healthcare.</p>
