--- a/html/contact.html
+++ b/html/contact.html
@@ -4,17 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - Synagene</title>
-    <link rel="stylesheet" href="../css/all.css">
     <link rel="stylesheet" href="../css/contact.css">
-    <link rel="stylesheet" href="../css/index.css">
+    <link href='https://fonts.googleapis.com/css?family=Cairo' rel='stylesheet'>
 </head>
 <body>
     <section id="hero-contact">
         <header>
-            <a href="index.html" class="logo-container">
-                <img src="synlogo.png" alt="Synagene Logo 1" class="logo">
-                <img src="synlogo2.png" alt="Synagene Logo 2" class="logo">
-            </a>
+            <div  class="logo-container">
+                <a href="index.html"><img  src="synlogo.png" alt="Synagene Logo 1" class="logo"></a>
+                <a href="index.html"><img  src="synlogo2.png" alt="Synagene Logo 2" class="logo"></a>
+            </div>
             
             <input type="checkbox" id="nav-toggle" class="nav-toggle">
             <label for="nav-toggle" class="nav-toggle-label">
@@ -96,7 +95,8 @@
                 </ul>
             </div>
             <div class="footer-column logo-column">
-                <img src="17.png" alt="SYNAGENE Logo"> <!-- Adjust src as necessary -->
+                <img class="logo1" src="synlogo.png" alt="Logo1">
+                <img class="logo2" src="Logotype.png" alt="Logo2"> <!-- Adjust src as necessary -->
             </div>
             <div class="footer-column contact-info">
                 <div>
@@ -112,5 +112,6 @@
             </div>
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
