change twitter and mail icon

--- a/contact.html
+++ b/contact.html
@@ -10,9 +10,8 @@
 <body>
     <section id="hero-contact">
         <header>
-            <div  class="logo-container">
-                <a href="index.html"><img  src="assets/images/synlogo.png" alt="Synagene Logo 1" class="logo"></a>
-                <a href="index.html"><img  src="assets/images/synlogo2.png" alt="Synagene Logo 2" class="logo"></a>
+            <div class="logo-container">
+                <a href="index.html"><img src="assets/images/synlogo.png" alt="Synagene Logo" class="logo"></a>
             </div>
             
             <input type="checkbox" id="nav-toggle" class="nav-toggle">
