--- a/about.html
+++ b/about.html
@@ -10,11 +10,9 @@
 <body>
     <section id="hero-about">
         <header>
-            <div  class="logo-container">
-                <a href="index.html"><img  src="assets/images/synlogo.png" alt="Synagene Logo 1" class="logo"></a>
-                <a href="index.html"><img  src="assets/images/synlogo2.png" alt="Synagene Logo 2" class="logo"></a>
+            <div class="logo-container">
+                <a href="index.html"><img src="assets/images/synlogo.png" alt="Synagene Logo" class="logo"></a>
             </div>
-            
             
             <input type="checkbox" id="nav-toggle" class="nav-toggle">
             <label for="nav-toggle" class="nav-toggle-label">
